BDD HCS E2E tests using SDK
Signed-off-by: Nana-EC <56320167+Nana-EC@users.noreply.github.com>